Added mission section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,16 +1,20 @@
 /* universal styles */
 body {
   margin: 0;
-  font-family: Helvetica;
+  padding: 0;
+  font-family: "Helvetica";
   background-color: black;
   font-size: 22px;
   color: seashell;
   opacity: 0.9;
+  text-align: center;
 }
 
 /* Header logo and navigation */
 
 header {
+  position: fixed;
+  z-index: 1;
   height: 69px;
   width: 100%;
   display: flex;
@@ -18,8 +22,10 @@ header {
   align-items: center;
   padding: 0 10px;
   border-bottom: 1px solid seashell;
-
+  background-color: black;
+  margin-top: 0;
 }
+
 img {
   height: 50px;
 }
@@ -34,3 +40,28 @@ a {
   opacity: 0.9;
   padding: 10px;
 }
+
+/* main container */
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  position: relative;
+  top: 69px;
+}
+
+/* Mission section */
+
+#mission {
+  background-image: url(../images/img-mission-background.jpg);
+  height: 700px;
+  display: flex;
+  align-items: center;
+
+}
+.textbox-mission {
+  background-color: black;
+  width: 100%;
+}
+
+/* Featured Tea section */
