--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -48,6 +48,9 @@ a {
   margin: 0 auto;
   position: relative;
   top: 69px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 /* Mission section */
@@ -57,11 +60,40 @@ a {
   height: 700px;
   display: flex;
   align-items: center;
-
 }
+
 .textbox-mission {
   background-color: black;
   width: 100%;
 }
 
+#mission h4 {
+  margin-bottom: 10px;
+}
+
 /* Featured Tea section */
+
+#tea {
+  width: 1000px;
+
+}
+
+.selection img {
+  width: 300px;
+  height: 200px;
+}
+
+.selection {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.selection-box {
+  display: block;
+  margin: 0 15px;
+}
+
+#tea h4 {
+  margin-top: 10px;
+}
